# ESAAN-DATASET

./: .gitignore  .replit  app.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted--Machine-Learning-ML-da-1764341106120_1764341106121.txt  Pasted--Phin-Lai-Phin--1764340926694_1764340926695.txt  Pasted--machine-learning-dataset--1764338470598_1764338470600.txt  content-1764338478957.md
config/: __init__.py  settings.py
data/: README.md
docs/: README.md  api-reference.md  dataset-schema.md  examples.md  installation.md  phin-dataset.md  usage.md  web-dashboard.md
output/: dissertation_analysis.csv  dissertation_extracted.json  dissertation_pages.csv  note_sequences.csv  scale_analysis.csv  tuning_systems.csv
output/dataset/: feature_catalog.csv  feature_catalog.json  schema.json
output/ml_dataset/: complete_ml_dataset.json  hybridization_techniques.csv  hybridization_techniques.json  ml_audio_features_schema.json  thai_jazz_features.csv  thai_jazz_features.json  thai_jazz_scale_mapping.csv  thai_jazz_scale_mapping.json
output/music_notation_dataset/: musical_notation.csv  musical_notation.json  notation_summary.json
output/phin_dataset/: phin_artists.csv  phin_artists.json  phin_dataset_complete.json  phin_lai_patterns.csv  phin_lai_patterns.json  (+6 more)
scripts/: export_all_datasets.py  setup_project.py  validate_data.py
src/: ai_analyzer.py  data_quality_checker.py  dataset_builder.py  dataset_explorer.py  music_notation_extractor.py  music_theory_analyzer.py  pdf_extractor.py
templates/: index.html
tests/: __init__.py  test_pdf_extractor.py
(+7 files in other folders)
