[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pdf-extractor>=0.1.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.6",
]
